<resources>

    <string name="app_name">Expense Tracker</string>
    <string name="nav_header_desc">User Profile Picture</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">profile@email.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="title_activity_home">Expense Tracker</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordRetype">Retype Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="income">Monthly Income</string>
    <string name="savings">Savings</string>
    <string name="profile">Profile</string>
    <string name="updateProfile">Update Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="demo">Demo</string>

    <string name="action_demo">DEMO</string>


    <!--buttons  -->
    <string name="btn_login">Login</string>
    <string name="btn_newUser">New User</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_return2login">Return to Login</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="about">About</string>
    <string name="about_expense_tracker">About Expense Tracker</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="information">Information</string>
    <string name="expensesColon">Expenses:</string>
    <string name="analyticsColon">Analytics:</string>
    <string name="furtherInquires">For further inquires email : expenseTracker@gmail.com</string>


</resources>
