<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_menu_expense"
            android:title="@string/expenses" />
        <item
            android:id="@+id/nav_graphing"
            android:icon="@drawable/ic_menu_trending"
            android:title="@string/analytics" />
    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_star"
                android:title="@string/about" />
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">

            <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/updateProfile" />

            <item
                android:id="@+id/nav_password"
                android:icon="@drawable/ic_menu_password"
                android:title="@string/changePassword" />

            </group>
        </menu>
    </item>

</menu>
